@@ -1,11 +1,17 @@
 #!/bin/sh
 # @configure_input@
-export MRN_COMM_PATH=@MRNETCOMMNODEBIN@
-export LMON_LAUNCHMON_ENGINE_PATH=@LAUNCHMONBIN@
-export LMON_REMOTE_LOGIN=@rshcmd@
-export XPLAT_RSHCOMMAND=@rshcmd@
-export XPLAT_RSH=@rshcmd@
-export MRNET_DEBUG_LOG_DIRECTORY=/dev/null
+export prefix=@prefix@
+export STAT_LMON_REMOTE_LOGIN=@rshcmd@
+export STAT_XPLAT_RSH=@rshcmd@
+if test -z $STAT_MRNET_COMM_PATH; then
+    export STAT_MRNET_COMM_PATH=@MRNETCOMMNODEBIN@
+fi
+if test -z $STAT_LMON_LAUNCHMON_ENGINE_PATH; then
+    export STAT_LMON_LAUNCHMON_ENGINE_PATH=@LAUNCHMONBIN@
+fi
+if test -z $STAT_MRNET_DEBUG_LOG_DIRECTORY; then
+    export STAT_MRNET_DEBUG_LOG_DIRECTORY=/dev/null
+fi
 if test -z $STAT_CONNECT_TIMEOUT; then
     export STAT_CONNECT_TIMEOUT=120
 fi
